Added main app comoponents

--- a/angular.json
+++ b/angular.json
@@ -122,5 +122,8 @@
         }
       }
     }},
-  "defaultProject": "Logbook"
+  "defaultProject": "Logbook",
+  "cli": {
+    "analytics": false
+  }
 }
