--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logbook",
+  "name": "pilot-logbook",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,38 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "bootstrap": "^4.4.1",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "@angular-devkit/build-angular": "^15.0.2",
+    "@angular/animations": "^15.0.2 ",
+    "@angular/cdk": "^15.1.4",
+    "@angular/common": "^15.0.2 ",
+    "@angular/compiler": "^15.0.2 ",
+    "@angular/core": "^15.0.2 ",
+    "@angular/forms": "^15.0.2 ",
+    "@angular/material": "^15.1.4",
+    "@angular/platform-browser": "^15.0.2 ",
+    "@angular/platform-browser-dynamic": "^15.0.2 ",
+    "@angular/router": "^15.0.4 ",
+    "@ngrx/effects": "^15.1.0",
+    "@ngrx/router-store": "^15.0.0",
+    "@ngrx/store": "^15.0.2",
+    "bootstrap": "^3.4.1",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.0.0",
+    "tslib": "^2.0.3",
+    "zone.js": "^0.11.8"
   }
 }
